# financial-news-sentiment

./: .coverage  .gitignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
docs/_build/html/financial_news_sentiment/: cli.html  config.html  exceptions.html  index.html  version.html
docs/_build/html/financial_news_sentiment/datasets/: base.html  financial_phrasebank.html  index.html
docs/_build/html/financial_news_sentiment/evaluation/: base.html  index.html  sklearn.html
docs/_build/html/financial_news_sentiment/live_data/: base.html  index.html  yahoo_finance.html
docs/_build/html/financial_news_sentiment/models/: base.html  finbert.html  index.html  ollama.html
prototype/: financial-news-sentiment-prototype.ipynb  prompt.md
src/financial_news_sentiment/: __init__.py  cli.py  cli.py.new  config.py  exceptions.py  version.py
src/financial_news_sentiment/datasets/: __init__.py  base.py  financial_phrasebank.py
src/financial_news_sentiment/evaluation/: __init__.py  base.py  sklearn.py
src/financial_news_sentiment/live_data/: __init__.py  base.py  yahoo_finance.py  yahoo_finance.py.new
src/financial_news_sentiment/models/: __init__.py  base.py  finbert.py  ollama.py  ollama.py.new
tests/: conftest.py  test_models.py
